# voice-assistant

./: .gitignore  CLAUDE.md  Progress.md  pyproject.toml  run.py
design/: 01_state_machine.md  02_component_data_flow.md  03_sequence_happy_path.md  04_audio_signal_flow.md  05_concurrency_and_work_breakdown.md  dumping_down_thoughts
voice_assistant/: ai_agent.py  audio_capture.py  audio_playback.py  debug_utils.py  orchestrator.py  ring_buffer.py  stt.py  tts.py  vad.py  wake_word.py
