[project]
name = "voice-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterplot>=0.0.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "silero-vad>=6.2.1",
    "soundfile>=0.14.0",
]
